--- a/webapp/index.html
+++ b/webapp/index.html
@@ -266,7 +266,7 @@
             <li class="col-md-4 col-sm-12 col-xs-12">
               <section>
                 <section class="price-txt price-txt-margin">
-                  <span>BIUT/USDT</span>
+                  <span>BIUT/RMB</span>
                   <!-- <span>3 day</span> -->
                 </section>
                 <section class="price-txt">
