add comment of news

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -319,15 +319,12 @@
               <img src="./images/index/dynamicsActive.png" class="dynamics-active" id="dynamics-active1" alt="" hidden/>
               <figcaption>
                 <section>
-                  <p>Blockchain landing application</p>
-                  <p>| blockchain + financial natural has</p>
-                  <p>landed</p>
+                  <p id="newstitle">Blockchain landing application</p>
                 </section>
                 <section>
-                  <p>For gamers, whether it is team FPS, MOBA</p>
-                  <p>or survival games, stability, low</p>
+                  <p id="subnewstitle">For gamers, whether it is team FPS, MOBA</p>
                 </section>
-                <time>24 hours ago</time>
+                <time id="newstime">24 hours ago</time>
               </figcaption>
             </figure>
           </li>
