添加未开通功能提示

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -363,7 +363,7 @@
         <ul class="row" id="newsList"></ul>
 
         <!-- 新闻mask -->
-        <section id="newsMask" class="mask">
+        <article id="newsMask" class="mask">
           <section class="news-mask">
             <section class="news-mask-content">
               <span class="mask-close" id="closeMask">X</span>
@@ -381,7 +381,7 @@
               </section>
             </section>
           </section>
-        </section>
+        </article>
         
       </section>
       
