--- a/webapp/index.html
+++ b/webapp/index.html
@@ -511,36 +511,36 @@
           <section class="foot-list last-foot-list">
             <ul>
               <li id="biutWx" class="biutWx">
-                <img src="./images/index/weixin.png" id="biutWxImg" alt="weixin" title="微信公众号"/>
+                <img src="./images/index/weixin.png" id="biutWxImg" alt="微信公众号" title="微信公众号"/>
                 <img src="./images/index/publicNumer.png" id="biutWxActiveImg" class="wxActive" alt="weixin" title="微信公众号"/>
               </li>
               <li id="biutWb">
                 <a href="https://weibo.com/SECblock" target="_blank">
-                  <img src="./images/index/weibo.png" id="biutWbImg" alt="weibo" title="新浪微博"/>
+                  <img src="./images/index/weibo.png" id="biutWbImg" alt="新浪微博" title="新浪微博"/>
                 </a>
               </li>
             </ul>
             <ul>
               <li id="biutTw">
                 <a href="https://twitter.com/BIUTblock" target="_blank">
-                  <img src="./images/index/twiter.png" id="biutTwImg" alt="twiter" title="twiter"/>
+                  <img src="./images/index/twiter.png" id="biutTwImg" alt="twiter" title="Twiter"/>
                 </a>
               </li>
               <li id="biutPl">
                 <a href="https://t.me/joinchat/HszzcUiWaWtR5pPmOhDPwg" target="_blank">
-                  <img src="./images/index/plane.png" id="biutPlImg" alt="plane" title="plane"/>
+                  <img src="./images/index/plane.png" id="biutPlImg" alt="telegram" title="Telegram"/>
                 </a>
               </li>
             </ul>
             <ul>
               <li id="biutFb">
                 <a href="https://www.facebook.com/BIUTblock" target="_blank">
-                  <img src="./images/index/facebook.png" id="biutFbImg" alt="facebook" title="facebook"/>
+                  <img src="./images/index/facebook.png" id="biutFbImg" alt="facebook" title="Facebook"/>
                 </a>
               </li>
               <li id="biutMk">
                 <a href="https://www.reddit.com/user/SECblock" target="_blank">
-                  <img src="./images/index/monkey.png" id="biutMkImg" alt="monkey" title="monkey"/>
+                  <img src="./images/index/monkey.png" id="biutMkImg" alt="reddit" title="Reddit"/>
                 </a>
               </li>
             </ul>
