修改标题、关键字、echart插件数据整理

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,8 +11,8 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <meta name="Keywords" content="" />
-  <meta name="Description" content="" />
+  <meta name="Keywords" content="比特信任系统、BIUT、BIU，加密货币、信任共识、ICO、信任算法、区块链3.0、PC-miner、Permissionless trust" />
+  <meta name="Description" content="比特信任系统是一种新的分布式信任系统，是第一个建立账户间基于系统信任的区块链网络，专注于互联网用户安全的进行去中心化交易和协作，为开发者、商家和互联网用户打开数字经济大门的钥匙" />
 
   <link rel="shortcut icon" href="./static/favicon.ico">
   <!--[if lt IE 9]>
@@ -27,7 +27,7 @@
 	        document.execCommand("Stop");
 	    </script>
   <![endif]-->
-  <title>BIUT - 社交电子商务链</title>
+  <title data-locale="currentTitle">Bit Trust System</title>
   <link href="./dist/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="./css/reset.css" rel="stylesheet">
   <link href="./css/public.css" rel="stylesheet">
@@ -176,7 +176,7 @@
                 white paper
               </a>
             </li>
-            <li data-locale="h-banner-list-txt3">Watch Video</li>
+            <!-- <li data-locale="h-banner-list-txt3">Watch Video</li> -->
           </ul>
   
           <figure class="head-down">
@@ -549,6 +549,7 @@
 
       </section>
 
+      <!-- <div id="main" class="echart-content"></div> -->
       <!-- footer 底部 -->
       <footer>
         <p>COPYRIGHT © 2017 BIUT TECHNOLOGY CO, LTD.ALL RIGHTS RESERVED.</p>
@@ -563,4 +564,6 @@
 <script src="./dist/wow/wow.js"></script>
 <script src="./js/public.js"></script>
 <script src="./js/index.js"></script>
+<script src="./dist/echarts/echarts.min.js"></script>
+
 </html>
