remove peaks of tps

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -428,8 +428,8 @@
           <li class="wow cntanimate3" data-wow-delay="1.25s">
             <span>
               <span id="idxCurrent"></span>
-              <span>l</span>
-              <span id="idPeak"></span>
+              <!-- <span>l</span>
+              <span id="idPeak"></span> -->
             </span>
             <span data-locale="h-net-txt3">Current/peak TPS</span>
           </li>
