--- a/webapp/index.html
+++ b/webapp/index.html
@@ -431,7 +431,7 @@
               <!-- <span>l</span>
               <span id="idPeak"></span> -->
             </span>
-            <span data-locale="h-net-txt3">Current/peak TPS</span>
+            <span data-locale="h-net-txt3">Current TPS</span>
           </li>
           <li class="wow cntanimate3" data-wow-delay="1.5s">
             <span>
