--- a/webapp/pages/about.html
+++ b/webapp/pages/about.html
@@ -11,8 +11,9 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <meta name="Keywords" content="" />
-  <meta name="Description" content="" />
+  <meta name="Keywords" content="比特信任系统、BIUT、BIU，加密货币、信任共识、ICO、信任算法、区块链3.0、PC-miner、Permissionless trust" />
+  <meta name="Description"
+    content="比特信任系统是一种新的分布式信任系统，是第一个建立账户间基于系统信任的区块链网络，专注于互联网用户安全的进行去中心化交易和协作，为开发者、商家和互联网用户打开数字经济大门的钥匙" />
 
   <link rel="shortcut icon" href="../static/favicon.ico">
   <!--[if lt IE 9]>
@@ -27,27 +28,29 @@
 	        document.execCommand("Stop");
 	    </script>
   <![endif]-->
-  <title>BIUT-社交电子商务链</title>
+  <title>Bit Trust System</title>
   <link href="../dist/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="../css/reset.css" rel="stylesheet">
   <link href="../css/public.css" rel="stylesheet">
-
+  <link href="../css/about.css" rel="stylesheet">
 </head>
 
 <body>
-  <section class="zoomMessage" id="zoomMessage">
-    <span>你的浏览器目前处于缩放状态，页面可能会出现错位现象，建议100%大小显示。</span>
+  <section class="zoom-message" id="zoomMessage">
+    <span data-locale="zoom">
+      Your browser is currently zoomed, and the page may be misplaced. It is recommended to display 100% size.
+    </span>
   </section>
 
   <!-- 网页前部分内容 -->
-  <main class="container-header">
+  <main class="about-container">
     <!-- 头部导航 -->
     <header class="public-head">
       <!-- logo -->
       <figure>
         <img src="../images/nav-logo.png" alt="BIUT" title="BIUT">
       </figure>
-  
+
       <!-- nav导航条 -->
       <nav>
         <ul>
@@ -62,7 +65,10 @@
             <a href="dynamic.html" data-locale="nav-dynamic">Dynamic</a>
           </li>
           <li>
-            <a href="gitter.html" data-locale="nav-gitter">Gitter</a>
+            <a href="http://wallet.biut.io/#/createWallet" target="_blank" data-locale="nav-gitter">Gitter</a>
+          </li>
+          <li class="login">
+            <a href="login.html" data-locale="nav-login">登陆</a>
           </li>
           <li>
             <span id="i18nZh"> 中文 </span>
@@ -72,26 +78,356 @@
         </ul>
       </nav>
     </header>
-    About 
-  <section class="footer">
-    <!--  -->
-    <section>
-      
-    </section>
-    <ul>
-      <li></li>
-    </ul>
+    <!-- 头部导航栏结束 -->
 
-    <!-- footer 底部 -->
-    <footer>
-      <p>COPYRIGHT © 2017 BIUT TECHNOLOGY CO, LTD.ALL RIGHTS RESERVED.</p>
-    </footer>
-  </section>
+    <section class="container">
+      <!-- 技术优势 -->
+      <section class="advantage-list">
+        <h2>123</h2>
+        <ul class="row">
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply1.png" alt="1">
+              <figcaption>
+                <h3>共识算法PGPOW</h3>
+                <span>Polling Group proof of work,融合pos与pow共识算法优势，实现去中心化POW挖矿</span>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply1.png" alt="1">
+              <figcaption>
+                <h3>去中心化下实现高TPS</h3>
+                <span>测试网有174个节点，10个群落情况下，网络达到33000TPS,主网上线后随着节点及节点群落数量增多，可实现更高TPS</span>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply1.png" alt="1">
+              <figcaption>
+                <h3>优异的去中心化</h3>
+                <span>高TPS，同时保持去中心化，突破分布式系统不可能三角定律</span>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+        <ul class="row">
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply1.png" alt="1">
+              <figcaption>
+                <h3>有效降低开发难度</h3>
+                <span>JavaScript完成的公链，未做任何推广，在npm下载量优异</span>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply1.png" alt="1">
+              <figcaption>
+                <h3>新一代公链技术</h3>
+                <span>模块化设计保证了扩展性。借助biut主网，根据自定义数据结构，发布一条公链只需几秒到几周时间</span>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply1.png" alt="1">
+              <figcaption>
+                <h3>多链架构</h3>
+                <span>双币经济模型，多链平行架构。多链结构实现了系统高吞吐和高安全性。双币经济模型则平衡了生态不同发展时期多方参与者的利益。</span>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+
+      <!-- BIUT应用场景 -->
+      <section class="apply-list">
+        <h2>BIUT应用场景</h2>
+        <ul class="row">
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply1.png" alt="1">
+              <figcaption>
+                <h3>社交电商</h3>
+                <span>去中心化C2C交易应用广泛，陌生人在互联网交易细分领域低频但需求强烈，适合区块链应用</span>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply2.png" alt="1">
+              <figcaption>
+                <h3>P2P借贷</h3>
+                <span>金融行业，因交易对象缺乏信任机制，整个处于行业瓶颈，国内更是频临崩盘。瞄准中产的理财需求，协助生态企业、合作伙伴借助BIUT系统转型</span>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="col-md-4 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/apply3.png" alt="1">
+              <figcaption>
+                <h3>公链商店</h3>
+                <span>为开发者提供开发去中心化、去信任化应用的便利，降低DAPP和公链开发的难度。从技术上协助生态企业占据国内社交电商垂直领域市场</span>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+
+      <!-- 代币使用 -->
+      <section class="use-list">
+        <h2>代币使用</h2>
+        <ul class="row">
+          <li class="col-md-6 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/useImg.png" alt="1">
+              <figcaption>
+                BIUT（原SEC）：支付、挖矿权益证明、交易抵押金、交易市场开通费用、交易纠纷仲裁费用等
+              </figcaption>
+            </figure>
+          </li>
+          <li class="col-md-6 col-sm-12 col-xs-12">
+            <figure>
+              <img src="../images/about/useImg.png" alt="1">
+              <figcaption>
+                信任令 BIU : 转账和智能合约GAS，发行自定义主链的节点费用
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+    </section>
+  </main>
+
+  <main class="footer">
+    <!-- BIUT生态成员 -->
+    <section class="foot-members">
+      <section class="container-fisrt"></section>
+      <section class="container">
+        <section class="foot-members-head">
+          <h2>BIUT生态成员</h2>
+          <figure>
+            <figcaption>我也要榜上有名</figcaption>
+            <img src="../images/about/memberMore.png" alt="">
+          </figure>
+        </section>
+        <section class="foot-members-cont">
+          <ul class="row">
+            <li class="col-md-3 col-sm-12 col-xs-12">
+              <figure>
+                <img src="../images/about/memberHeaderImg.png" alt="">
+                <figcaption>
+                  <h4>储炀</h4>
+                  <p>曾任世界第三大FinTech公司项目负责人，20多年中国及北美银行应用系统、金融软件系统设计和研发经验，新加坡南洋理工大学计算机博士</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+          </ul>
+
+          <ul class="row">
+            <li class="col-md-3 col-sm-12 col-xs-12">
+              <figure>
+                <img src="../images/about/memberHeaderImg.png" alt="">
+                <figcaption>
+                  <h4>储炀</h4>
+                  <p>曾任世界第三大FinTech公司项目负责人，20多年中国及北美银行应用系统、金融软件系统设计和研发经验，新加坡南洋理工大学计算机博士</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+          </ul>
+
+          <ul class="row">
+            <li class="col-md-3 col-sm-12 col-xs-12">
+              <figure>
+                <img src="../images/about/memberHeaderImg.png" alt="">
+                <figcaption>
+                  <h4>储炀</h4>
+                  <p>曾任世界第三大FinTech公司项目负责人，20多年中国及北美银行应用系统、金融软件系统设计和研发经验，新加坡南洋理工大学计算机博士</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+            <li class="col-md-3 col-sm-12 col-xs-12"></li>
+          </ul>
+
+          <section class="members-tab">
+            <figure>
+              <figcaption>换一换</figcaption>
+              <img src="../images/about/memberRefresh.png" alt="">
+            </figure>
+          </section>
+        </section>
+      </section>
+      <section class="container-last"></section>
+    </section>
+
+    <section class="container">
+      <!-- 时间历程 -->
+      <section class="foot-history">
+        <ul class="row">
+          <li class="col-md-3 col-sm-12 col-xs-12">
+            1
+          </li>
+          <li class="col-md-3 col-sm-12 col-xs-12">
+            2
+          </li>
+          <li class="col-md-3 col-sm-12 col-xs-12">
+            3
+          </li>
+          <li class="col-md-3 col-sm-12 col-xs-12">
+            4
+          </li>
+        </ul>
+        <ul class="row">
+          <li class="col-md-3 col-sm-12 col-xs-12">
+            <section>
+              <p class="foot-history-time">Jan.19 2016</p>
+              <p class="foot-history-txt">发布1.0版</p>
+              <p class="foot-history-txt">
+                本共识算法和网络方案
+              </p>
+            </section>
+          </li>
+          <li class="col-md-3 col-sm-12 col-xs-12">
+            <p class="foot-history-time">Jan.19 2016</p>
+            <p class="foot-history-txt">发布1.0版</p>
+            <p class="foot-history-txt">
+              本共识算法和网络方案
+            </p>
+          </li>
+          <li class="col-md-3 col-sm-12 col-xs-12">
+            <p class="foot-history-time">Jan.19 2016</p>
+            <p class="foot-history-txt">发布1.0版</p>
+            <p class="foot-history-txt">
+              本共识算法和网络方案
+            </p>
+          </li>
+          <li class="col-md-3 col-sm-12 col-xs-12">
+            <p class="foot-history-time">Jan.19 2016</p>
+            <p class="foot-history-txt">发布1.0版</p>
+            <p class="foot-history-txt">
+              本共识算法和网络方案
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- 底部内容 -->
+      <section class="about-list about-footer-list">
+        <section>
+          <h4 data-locale="h-foot-proj-tit">Product</h4>
+          <ul>
+            <li><a href="#" data-locale="h-foot-proj-txt1">DApp</a></li>
+            <li><a href="http://wallet.biut.io/#/createWallet" target="_blank" data-locale="h-foot-proj-txt2">Wallet</a>
+            </li>
+            <li><a href="#" data-locale="h-foot-proj-txt3">Mining tool</a></li>
+          </ul>
+        </section>
+
+        <section class="foot-dev">
+          <h4 data-locale="h-foot-dev-tit">Developer</h4>
+          <section class="foot-list">
+            <ul>
+              <li><a href="#" data-locale="h-foot-dev-txt1">Development tool documentation</a></li>
+              <li><a href="https://github.com/BIUT-Block" target="_blank" data-locale="h-foot-dev-txt2">GitHub</a></li>
+              <li><a href="http://scan.biut.io/" target="_blank" data-locale="h-foot-dev-txt3">Blockchain browser</a>
+              </li>
+            </ul>
+            <ul class="list-margin-left">
+              <li><a href="http://test.biut.io/" target="_blank" data-locale="h-foot-dev-txt4">Test network</a></li>
+              <li><a href="#" data-locale="h-foot-dev-txt5">Network Developer</a></li>
+              <li><a href="#" data-locale="h-foot-dev-txt6">Developer community</a></li>
+            </ul>
+          </section>
+        </section>
+
+        <section class="foot-ec">
+          <h4 data-locale="h-foot-eco-tit">Ecological correlation </h4>
+          <section class="foot-list">
+            <ul>
+              <li><a href="#" data-locale="h-foot-eco-txt1">Tongzheng Holding</a></li>
+              <li><a href="#" data-locale="h-foot-eco-txt2">BIUT Foundation</a></li>
+              <li><a href="#" data-locale="h-foot-eco-txt3">Hualian Capital</a></li>
+              <li><a href="#" data-locale="h-foot-eco-txt4">Xinlian Block Chain Co., Ltd.</a></li>
+            </ul>
+            <ul class="list-margin-left">
+              <li><a href="#" data-locale="h-foot-eco-txt5">BIUT International Club</a></li>
+              <li><a href="#" data-locale="h-foot-eco-txt6">BIUT new developments</a></li>
+              <li><a href="https://gitter.im/grin_community/Lobby" target="_blank"
+                  data-locale="h-foot-eco-txt7">Gitter</a></li>
+              <li><a href="#" data-locale="h-foot-eco-txt8">About the project</a></li>
+            </ul>
+          </section>
+        </section>
+
+        <section class="last-section-cnt">
+          <h4 data-locale="h-foot-focus-tit">Focus on BIUT</h4>
+          <section class="foot-list last-foot-list">
+            <ul>
+              <li id="biutWx" class="biutWx">
+                <img data-original="../images/index/weixin.png" id="biutWxImg" alt="微信公众号" title="微信公众号" />
+                <img src="../images/index/publicNumer.png" id="biutWxActiveImg" class="wxActive" alt="weixin"
+                  title="微信公众号" />
+              </li>
+              <li id="biutWb">
+                <a href="https://weibo.com/SECblock" target="_blank">
+                  <img data-original="../images/index/weibo.png" id="biutWbImg" alt="新浪微博" title="新浪微博" />
+                </a>
+              </li>
+            </ul>
+            <ul>
+              <li id="biutTw">
+                <a href="https://twitter.com/BIUTblock" target="_blank">
+                  <img data-original="../images/index/twiter.png" id="biutTwImg" alt="twiter" title="Twiter" />
+                </a>
+              </li>
+              <li id="biutPl">
+                <a href="https://t.me/joinchat/HszzcUiWaWtR5pPmOhDPwg" target="_blank">
+                  <img data-original="../images/index/plane.png" id="biutPlImg" alt="telegram" title="Telegram" />
+                </a>
+              </li>
+            </ul>
+            <ul>
+              <li id="biutFb">
+                <a href="https://www.facebook.com/BIUTblock" target="_blank">
+                  <img data-original="../images/index/facebook.png" id="biutFbImg" alt="facebook" title="Facebook" />
+                </a>
+              </li>
+              <li id="biutMk">
+                <a href="https://www.reddit.com/user/SECblock" target="_blank">
+                  <img data-original="../images/index/monkey.png" id="biutMkImg" alt="reddit" title="Reddit" />
+                </a>
+              </li>
+            </ul>
+          </section>
+        </section>
+
+      </section>
+
+      <!-- <div id="main" class="echart-content"></div> -->
+      <!-- footer 底部 -->
+      <footer>
+        <p>COPYRIGHT © 2017 BIUT TECHNOLOGY CO, LTD.ALL RIGHTS RESERVED.</p>
+      </footer>
+    </section>
+  </main>
 
 </body>
 <script src="../dist/jq/jquery-3.4.1.min.js"></script>
+<script src="../dist/wow/wow.js"></script>
+<script src="../dist/jq/jquery.lazyload.min.js"></script>
 <script src="../dist/jq/jquery.i18n.properties-min-1.0.9.js"></script>
 <script src="../dist/bootstrap/js/bootstrap.min.js"></script>
 <script src="../js/public.js"></script>
-<script src="../js/index.js"></script>
 </html>
