--- a/webapp/pages/login.html
+++ b/webapp/pages/login.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -30,24 +29,28 @@
   <title>BIUT-社交电子商务链</title>
   <link href="../dist/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="../css/reset.css" rel="stylesheet">
+  <link href="../css/swiper.min.css" rel="stylesheet">
   <link href="../css/public.css" rel="stylesheet">
+  <link href="../css/login.css" rel="stylesheet">
 
 </head>
 
 <body>
-  <section class="zoomMessage" id="zoomMessage">
-    <span>你的浏览器目前处于缩放状态，页面可能会出现错位现象，建议100%大小显示。</span>
+  <section class="zoom-message" id="zoomMessage">
+    <span data-locale="zoom">
+      Your browser is currently zoomed, and the page may be misplaced. It is recommended to display 100% size.
+    </span>
   </section>
 
   <!-- 网页前部分内容 -->
-  <main class="container-header">
+  <main class="login-container">
     <!-- 头部导航 -->
     <header class="public-head">
       <!-- logo -->
       <figure>
         <img src="../images/nav-logo.png" alt="BIUT" title="BIUT">
       </figure>
-  
+
       <!-- nav导航条 -->
       <nav>
         <ul>
@@ -55,14 +58,17 @@
             <a href="../index.html" data-locale="nav-home">Home</a>
           </li>
           <li>
-            <a href="about.html data-locale="nav-about"">About</a>
-          </li>
-          <li>
-            <a href="dynamic.html" data-locale="nav-dynamic">Dynamic</a>
+            <a href="about.html" data-locale="nav-about">About</a>
           </li>
           <li class="check-color check-img">
             <img src="../images/index/nav-check.png" alt="">
-            <span data-locale="nav-gitter">Gitter</span>
+            <span data-locale="nav-dynamic">Dynamic</span>
+          </li>
+          <li>
+            <a href="http://wallet.biut.io/#/createWallet" target="_blank" data-locale="nav-gitter">Gitter</a>
+          </li>
+          <li class="login">
+            <a href="#" data-locale="nav-login">登陆</a>
           </li>
           <li>
             <span id="i18nZh"> 中文 </span>
@@ -72,26 +78,15 @@
         </ul>
       </nav>
     </header>
-   gitter 
-  <section class="footer">
-    <!--  -->
-    <section>
-      
-    </section>
-    <ul>
-      <li></li>
-    </ul>
-
-    <!-- footer 底部 -->
+    
     <footer>
-      <p>COPYRIGHT © 2017 BIUT TECHNOLOGY CO, LTD.ALL RIGHTS RESERVED.</p>
+      <span>COPYRIGHT  © 2017 SEC TECHNOLOGY CO, LTD.ALL RIGHTS RESERVED.</span>
     </footer>
-  </section>
+  </main>
+
 
 </body>
 <script src="../dist/jq/jquery-3.4.1.min.js"></script>
 <script src="../dist/jq/jquery.i18n.properties-min-1.0.9.js"></script>
 <script src="../dist/bootstrap/js/bootstrap.min.js"></script>
-<script src="../js/public.js"></script>
-<script src="../js/index.js"></script>
 </html>
