--- a/webapp/index.html
+++ b/webapp/index.html
@@ -153,7 +153,7 @@
             </li>
             <li>
               <!-- Gitter -->
-              <a href="http://wallet.biut.io/#/createWallet" target="_blank" data-locale="nav-gitter">Wallet</a>
+              <a href="http://wallet.biut.io/#/createWallet" target="_blank" data-locale="nav-wallet">Wallet</a>
             </li>
             <!-- <li class="login">
               <a href="./pages/login.html" data-locale="nav-login">登陆</a>
