--- a/webapp/index.html
+++ b/webapp/index.html
@@ -538,35 +538,33 @@
 
         <section class="last-section-cnt">
           <h4 data-locale="h-foot-focus-tit">Focus on BIUT</h4>
-          <section class="foot-list last-foot-list">
+          <section class="foot-list-img">
             <ul>
               <li id="biutWx" class="biutWx">
                 <img data-original="./images/index/weixin.png" id="biutWxImg" alt="WeChat" title="WeChat" />
                 <img src="./images/index/publicNumer.png" id="biutWxActiveImg" class="wxActive" alt="weixin"
                   title="WeChat" />
               </li>
+              <li id="biutTw">
+                <a href=" " target="_blank">
+                  <img data-original="./images/index/twiter.png" id="biutTwImg" alt="twiter" title="Twiter" />
+                </a>
+              </li>
+              <li id="biutFb">
+                <a href="https://www.facebook.com/BIUTblock" target="_blank">
+                  <img data-original="./images/index/facebook.png" id="biutFbImg" alt="facebook" title="Facebook" />
+                </a>
+              </li>
+            </ul>
+            <ul>
               <li id="biutWb">
                 <a href="https://weibo.com/SECblock" target="_blank">
                   <img data-original="./images/index/weibo.png" id="biutWbImg" alt="MicroBlog" title="MicroBlog" />
                 </a>
               </li>
-            </ul>
-            <ul>
-              <li id="biutTw">
-                <a href="https://twitter.com/BIUTblock" target="_blank">
-                  <img data-original="./images/index/twiter.png" id="biutTwImg" alt="twiter" title="Twiter" />
-                </a>
-              </li>
               <li id="biutPl">
                 <a href="https://t.me/joinchat/HszzcUiWaWtR5pPmOhDPwg" target="_blank">
                   <img data-original="./images/index/plane.png" id="biutPlImg" alt="telegram" title="Telegram" />
-                </a>
-              </li>
-            </ul>
-            <ul>
-              <li id="biutFb">
-                <a href="https://www.facebook.com/BIUTblock" target="_blank">
-                  <img data-original="./images/index/facebook.png" id="biutFbImg" alt="facebook" title="Facebook" />
                 </a>
               </li>
               <li id="biutMk">
