修改文字内容

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -122,7 +122,7 @@
       <header class="public-head" id="header-nav">
         <!-- logo -->
         <figure id="toggle-head">
-          <img data-original="./images/nav-logo.png" alt="BIUT" title="BIUT">
+          <img src="./images/nav-logo.png" alt="BIUT" title="BIUT">
           <figcaption id="navbar-toggle">
             <span></span>
             <span></span>
@@ -134,7 +134,7 @@
         <nav id="tabNav">
           <ul>
             <li class="check-color check-img">
-              <img data-original="./images/index/nav-check.png" alt="">
+              <img src="./images/index/nav-check.png" alt="">
               <span data-locale="nav-home">Home</span>
             </li>
             <!-- <li>
@@ -175,12 +175,12 @@
             <!-- <img data-original="./images/index/logo.png" alt="BIUT" title="BIUT"> -->
             <h1 class="head-title" data-locale="h-banner-tit">Bit Trust System</h1>
             <figcaption>
-              <img data-original="./images/index/symbol1.png" alt="">
+              <img src="./images/index/symbol1.png" alt="">
               <p data-locale="h-banner-name1" class="pc-tit">Permissionless Trust，Free To Trade</p>
               <p data-locale="h-banner-name2" class="moible-tit">Permissionless Trust</p>
-              <p data-locale="h-banner-name3" class="moible-tit">Free To Trade !</p>
+              <p data-locale="h-banner-name3" class="moible-tit">Free To Trade</p>
 
-              <img data-original="./images/index/symbol2.png" alt="">
+              <img src="./images/index/symbol2.png" alt="">
             </figcaption>
           </figure>
 
@@ -201,7 +201,7 @@
           </ul>
 
           <figure class="head-down">
-            <img data-original="./images/index/header-down.png" id="downLoad" alt="BIUT-down" title="">
+            <img src="./images/index/header-down.png" id="downLoad" alt="BIUT-down" title="">
           </figure>
         </section>
 
@@ -209,7 +209,7 @@
         <section class="about-project" id="aboutProject">
           <!-- 功能 子导航栏 -->
           <article class="public-title">
-            <h3 data-locale="h-proj-tit" class="wow titanimate" data-wow-delay=".5s">About the project</h3>
+            <h3 data-locale="h-proj-tit" class="wow titanimate" data-wow-delay=".5s">About The Project</h3>
             <!-- <figure>
               <figcaption data-locale="more">
                 understand more
@@ -370,7 +370,7 @@
       <section class="new-dynamics">
         <!-- 功能 子导航栏 -->
         <article class="public-title">
-          <h3 data-locale="h-dyc-tit" class="wow titanimate" data-wow-delay=".5s">New dynamics</h3>
+          <h3 data-locale="h-dyc-tit" class="wow titanimate" data-wow-delay=".5s">New Dynamics</h3>
           <!-- <figure>
             <figcaption data-locale="more">
               understand more
@@ -439,17 +439,17 @@
       <section class="network-state">
         <div 功能 子导航栏 -->
           <article class="public-title">
-            <h3 data-locale="h-net-tit" class="wow titanimate" data-wow-delay=".5s">Network state</h3>
+            <h3 data-locale="h-net-tit" class="wow titanimate" data-wow-delay=".5s">Network State</h3>
           </article>
 
           <ul>
             <li class="wow cntanimate3" data-wow-delay=".75s">
               <span id="idxNetwork"></span>
-              <span data-locale="h-net-txt1">Node network</span>
+              <span data-locale="h-net-txt1">Nodes Online</span>
             </li>
             <li class="wow cntanimate3" data-wow-delay="1s">
               <span id="idxAccount"></span>
-              <span data-locale="h-net-txt2">current account</span>
+              <span data-locale="h-net-txt2">Current Accounts</span>
             </li>
             <li class="wow cntanimate3" data-wow-delay="1.25s">
               <span>
@@ -478,7 +478,7 @@
                 <span>l</span>
                 <span id="idxAffairs2"></span>
               </span>
-              <span data-locale="h-net-txt5">BIUT/International Affairs</span>
+              <span data-locale="h-net-txt5">BIUT / BIU Transactions</span>
             </li>
           </ul>
       </section>
@@ -493,10 +493,10 @@
         <section>
           <h4 data-locale="h-foot-proj-tit">Product</h4>
           <ul>
-            <li><a href="#" data-locale="h-foot-proj-txt1">DApp</a></li>
+            <!-- <li><a href="#" data-locale="h-foot-proj-txt1">DApp</a></li> -->
             <li><a href="http://wallet.biut.io/#/createWallet" target="_blank" data-locale="h-foot-proj-txt2">Wallet</a>
             </li>
-            <li><a href="#" data-locale="h-foot-proj-txt3">Mining tool</a></li>
+            <!-- <li><a href="#" data-locale="h-foot-proj-txt3">Mining tool</a></li> -->
           </ul>
         </section>
 
@@ -504,15 +504,17 @@
           <h4 data-locale="h-foot-dev-tit">Developer</h4>
           <section class="foot-list">
             <ul>
-              <li><a href="#" data-locale="h-foot-dev-txt1">Development tool documentation</a></li>
+              <!-- <li><a href="#" data-locale="h-foot-dev-txt1">Development tool documentation</a></li> -->
+              <li><a href="https://www.npmjs.com/org/sec-block" target="_blank"
+                  data-locale="h-foot-dev-txt7">npm</a></li>
               <li><a href="https://github.com/BIUT-Block" target="_blank" data-locale="h-foot-dev-txt2">GitHub</a></li>
-              <li><a href="http://scan.biut.io/" target="_blank" data-locale="h-foot-dev-txt3">Blockchain browser</a>
+              <li><a href="http://scan.biut.io/" target="_blank" data-locale="h-foot-dev-txt3">Blockchain Browser</a>
               </li>
+              <li><a href="http://test.biut.io/" target="_blank" data-locale="h-foot-dev-txt4">Test network</a></li>
             </ul>
             <ul class="list-margin-left">
-              <li><a href="http://test.biut.io/" target="_blank" data-locale="h-foot-dev-txt4">Test network</a></li>
-              <li><a href="#" data-locale="h-foot-dev-txt5">Network Developer</a></li>
-              <li><a href="#" data-locale="h-foot-dev-txt6">Developer community</a></li>
+              <!-- <li><a href="#" data-locale="h-foot-dev-txt5">Network Developer</a></li> -->
+              <!-- <li><a href="#" data-locale="h-foot-dev-txt6">Developer community</a></li> -->
             </ul>
           </section>
         </section>
@@ -521,6 +523,11 @@
           <h4 data-locale="h-foot-eco-tit">Ecological correlation </h4>
           <section class="foot-list">
             <ul>
+              <li><a href="https://gitter.im/grin_community/Lobby" target="_blank" data-locale="h-foot-eco-txt9">GITTER</a></li>
+              <li><a href="https://www.tokenholding.cn/" target="_blank" data-locale="h-foot-eco-txt10">Tokenholding</a></li>
+              <li><a href="https://www.secblock.io/" target="_blank" data-locale="h-foot-eco-txt11">Social And Community</a></li>
+            </ul>
+            <!-- <ul>
               <li><a href="#" data-locale="h-foot-eco-txt1">Tongzheng Holding</a></li>
               <li><a href="#" data-locale="h-foot-eco-txt2">BIUT Foundation</a></li>
               <li><a href="#" data-locale="h-foot-eco-txt3">Hualian Capital</a></li>
@@ -532,7 +539,7 @@
               <li><a href="https://gitter.im/grin_community/Lobby" target="_blank"
                   data-locale="h-foot-eco-txt7">Gitter</a></li>
               <li><a href="#" data-locale="h-foot-eco-txt8">About the project</a></li>
-            </ul>
+            </ul> -->
           </section>
         </section>
 
@@ -546,8 +553,8 @@
                   title="WeChat" />
               </li>
               <li id="biutTw">
-                <a href=" " target="_blank">
-                  <img data-original="./images/index/twiter.png" id="biutTwImg" alt="twiter" title="Twiter" />
+                <a href="https://twitter.com/BIUTblock" target="_blank">
+                  <img data-original="./images/index/twiter.png" id="biutTwImg" alt="twitter" title="Twitter" />
                 </a>
               </li>
               <li id="biutFb">
