--- a/webapp/index.html
+++ b/webapp/index.html
@@ -523,7 +523,7 @@
           <h4 data-locale="h-foot-eco-tit">Ecological correlation </h4>
           <section class="foot-list">
             <ul>
-              <li><a href="https://gitter.im/grin_community/Lobby" target="_blank" data-locale="h-foot-eco-txt9">GITTER</a></li>
+               <!--<li><a href="https://gitter.im/grin_community/Lobby" target="_blank" data-locale="h-foot-eco-txt9">GITTER</a></li> -->
               <li><a href="https://www.tokenholding.cn/" target="_blank" data-locale="h-foot-eco-txt10">Tokenholding</a></li>
               <li><a href="https://www.secblock.io/" target="_blank" data-locale="h-foot-eco-txt11">Social And Community</a></li>
             </ul>
