--- a/webapp/index.html
+++ b/webapp/index.html
@@ -102,6 +102,15 @@
         top: 0;
       }
     }
+
+    @keyframes tipmove {
+      0%{top:-0.6rem;opacity:0}
+      25%{top:-0.3rem;opacity:.5}
+      50%{top:0;opacity:1}
+      75%{top:.3rem;opacity:.5}
+      100%{top:.6rem;opacity:0}
+    }
+    .animationDown {animation: tipmove 1.5s infinite ease-in-out;}
   </style>
 </head>
 
@@ -197,16 +206,19 @@
                 White Paper
               </a>
             </li>
-            <!-- <li data-locale="h-banner-list-txt3">Watch Video</li> -->
+            <!-- <li data-locale="h-banner-list-txt3">Watch Video</li>  -->
           </ul>
 
           <figure class="head-down">
-            <img src="./images/index/header-down.png" id="downLoad" alt="BIUT-down" title="">
+            <section class="head-down-img">
+              <img src="./images/index/header-downs.png" class="animationDown" id="downLoad" alt="BIUT-down" title="">
+              <img src="./images/index/header-down.png" alt="BIUT-down" title="">
+            </section>
           </figure>
         </section>
 
         <!-- about project  -->
-        <section class="about-project" id="aboutProject">
+        <section class="about-project scrollContent">
           <!-- 功能 子导航栏 -->
           <article class="public-title">
             <h3 data-locale="h-proj-tit" class="wow titanimate" data-wow-delay=".5s">About The Project</h3>
@@ -282,7 +294,7 @@
         </section>
 
         <!-- PRICE -->
-        <section class="price">
+        <section class="price scrollContent">
           <!-- 功能 子导航栏 -->
           <article class="public-title price-title">
             <h3 data-locale="h-pr-tit" class="wow titanimate" data-wow-delay=".5s">PRICE</h3>
@@ -363,9 +375,8 @@
   </main>
 
   <!-- 网页后部分内容 -->
-  <main class="container-footer">
+  <main class="container-footer scrollContent">
     <section class="container">
-
       <!-- New dynamics -->
       <section class="new-dynamics">
         <!-- 功能 子导航栏 -->
@@ -405,7 +416,7 @@
       </section>
 
       <!-- Submit a subscription -->
-      <section class="suggest">
+      <section class="suggest scrollContent">
         <p class="suggest-tit" data-locale="h-ss-tit">Subscribe to the latest news! Get timely news about BIUT projects!
         </p>
         <section class="pc-suggest">
@@ -436,8 +447,8 @@
       </section>
 
       <!-- Network state -->
-      <section class="network-state">
-        <div 功能 子导航栏 -->
+      <section class="network-state scrollContent">
+          <!-- 功能 子导航栏 -->
           <article class="public-title">
             <h3 data-locale="h-net-tit" class="wow titanimate" data-wow-delay=".5s">Network State</h3>
           </article>
@@ -455,7 +466,6 @@
               <span>
                 <span id="idxCurrent"></span>
               </span>
-
               <!-- <span>
                 <span id="idxCurrent"></span>
                 <span>l</span>
@@ -486,7 +496,7 @@
     </section>
   </main>
 
-  <main class="footer">
+  <main class="footer scrollContent">
     <section class="container">
       <!--  -->
       <section class="about-list">
