change footer english text

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -535,7 +535,7 @@
             <ul>
                <!--<li><a href="https://gitter.im/grin_community/Lobby" target="_blank" data-locale="h-foot-eco-txt9">GITTER</a></li> -->
               <li><a href="https://www.tokenholding.cn/" target="_blank" data-locale="h-foot-eco-txt10">Tokenholding</a></li>
-              <li><a href="https://www.secblock.io/" target="_blank" data-locale="h-foot-eco-txt11">Social And Community</a></li>
+              <li><a href="https://www.secblock.io/" target="_blank" data-locale="h-foot-eco-txt11">Social Ecommerce Chain</a></li>
             </ul>
             <!-- <ul>
               <li><a href="#" data-locale="h-foot-eco-txt1">Tongzheng Holding</a></li>
